--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,49 @@
 @import '~antd/dist/antd.css';
 
+
+.App {
+    text-align: center;
+}
+
+.App-logo {
+    height: 10vmin !important;
+    pointer-events: none;
+    position: absolute;
+    margin-left: -25px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+}
+
+.App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+.App-link {
+    color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
